...
  componentWillUnmount() {
    this._unsubscribe();
  }

  LHButtonCB(type) {
    let title = type;
    if (type === 'Ofici') title = 'Ofici de lectura';
    this.props.navigation.navigate('LHDisplay', { type: type, title: title });
  }

  render() {
    return (
      <View style={{ flex: 1, backgroundColor: GlobalKeys.screensBackgroundColor }}>
...
